--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -1,9 +1,57 @@
-<h1>Eventos</h1>
-
-<div *ngFor="let evento of eventos">
-  <p><b>Tema: </b>{{evento.tema}}</p>
-  <p><b>Eventos: </b>{{evento.local}}</p>
+<h2>Eventos</h2>
 <hr>
+
+<div class="row g-3 mb-3">
+  <div class="col-auto">
+    <input type="text" class="form-control" placeholder="Buscar"
+    [(ngModel)]="filtroLista">
+  </div>
 </div>
+<table class="table table-striped">
+  <thead class="table-dark">
+    <tr>
+      <th>
+        <button class="btn btn-outline-light btn-ms" type="button" (click)="alterarImagem()">
+          {{!exibirImagem ? 'exibir' : 'ocultar'}}
+        </button>
 
-
+      </th>
+      <th>#</th>
+      <th>Tema</th>
+      <th>Local</th>
+      <th>Data</th>
+      <th>Qtd pessoas</th>
+      <th>Lote</th>
+      <th>Opções</th>
+    </tr>
+  </thead>
+  <tbody *ngIf="eventos && eventos.length">
+    <tr *ngFor="let evento of eventosFiltrados">
+      <td>
+        <img [collapse]="!exibirImagem"
+             [isAnimated]="true"
+        src="assets/{{evento.imagemUrl}}"
+        [style.width.px]="larguraImagem"
+        [style.margin.px]="margemImagem"
+        alt="">
+      </td>
+      <td>{{evento.eventoId}}</td>
+      <td>{{evento.tema}}</td>
+      <td>{{evento.local}}</td>
+      <td>{{evento.dataEvento}}</td>
+      <td>{{evento.qtdPessoas}}</td>
+      <td>{{evento.lote}}</td>
+      <td>
+        <button type="button" class="btn btn-primary btn-sm mr-5">Editar</button>
+        <button type="button" class="btn btn-danger btn-sm ">Excluir</button>
+      </td>
+    </tr>
+  </tbody>
+  <tfoot *ngIf="!eventos.length">
+    <tr>
+      <td colspan="8" class="text-center">
+        <h4>Nenhum Evento Econtrado!</h4>
+      </td>
+    </tr>
+  </tfoot>
+</table>
